tests/snapshots/conformance__n_string_accentuated_char_no_quotes.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[é]
stdout --- 
<empty>
stderr --- 
error: unexpected character `é`. expected start of a json value
 --> stdin:1:2
  |
1 | [é]
  |  ^
